# fdtd.py

./: .gitignore  .python-version  .readthedocs.yml  .style.yapf  .travis.yml  LICENSE  README.md  README.rst  logging_config.ini  main.py  materials.json  pyproject.toml  requirements.txt  test.py
docs/: conf.py  fdtd.rst  index.rst  modules.rst
docs/theory/: fdtd.tex
examples/: periodic_boundary.py  photonic_crystal_band.py  photonic_crystal_bandgap_2d.py  photonic_crystal_bandgap_3d.py  voltage_resistor.py
fdtd/: __init__.py  bases.py  boundaries.py  constants.py  detectors.py  exceptions.py  grid.py  lumped_elements.py  materials.py  objects.py  plotting.py  source.py  sources.py  utils.py  waveforms.py
tests/: test_fdtd.py  test_grid.py  test_utils.py  test_waveforms.py
