[tool.poetry]
name = "fdtd.py"
version = "0.0.1"
description = ""
authors = ["Tiago Vilela <tiagovla@gmail.com>"]

packages = [
    {include = "fdtd", from="."}
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
