[tool.poetry]
name = "fdtd.py"
version = "0.0.2"
description = ""
authors = ["Tiago Vilela <tiagovla@gmail.com>"]
license = "MIT"
packages = [
    {include = "fdtd", from="."}
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
tqdm = "^4.57.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
neovim = "^0.3.1"
pudb = "^2020.1"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
sphinx-autodoc-typehints = "^1.11.1"
"morpho.py" = "^0.0.3"
scipy = "^1.6.1"
matplotlib = "^3.3.3"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
